2.1.1 - 2011/??/??
==================

  - When the interpreter needs to scale an image, it can now use bilinear
    filtering.  This results in smoother images (without filtering, scaled
    images can appear pixelated or have other scaling artifacts).  However, the
    configuration dialog provides an option to disable filtering, since it also
    makes scaled images appear less sharp.

  - Fixed a bug that resulted in games using the wrong font in some places.
    "Six Stories" is one example; it would previously use a wrong font for
    input, titles and statusbar.

  - It is now possible to use the main game font as input font through a new
    option found in the configuration dialog.

  - The file I/O safety level feature of the VM is now configurable through the
    configuration dialog.

  - The interpreter now correctly responds to game queries about whether
    graphics, audio and hyperlinks are currently enabled or disabled.
    Previously, the interpreter would always report that these features are
    enabled, making it impossible for games to adapt their behavior (for
    example "Six Stories" alters its behavior according to whether graphics and
    sound are enabled in the interpreter preferences.)

  - Fades and crossfades are now correctly advertised as being supported.
    Previously, the interpreter wrongly responded with "not supported" when a
    game was querying about it.


2.1.0 - 2011/02/01
==================

  - Page-pauses (aka "MORE" prompts) are now occurring when the game displays
    more content that will fit in the window.

  - Banners can now have borders.  Note that borders are controlled by the
    game; it's not a feature that can be switched on or off by the player.

  - Banners now correctly take margins into account when calculating sizes.
    This fixes the banner at the bottom in "Walker & Silhouette" for example.

  - The interpreter will no longer allow scrolling in banners unless the game
    allows it.
